<resources>
    <string name="app_name">Clean Test</string>
    <string name="custom_alert">Custom Alert</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="_40">40%</string>
    <string name="show_custom_alert">Show custom alert</string>
    <string name="go_to_second_screen">Go to second screen</string>
    <string name="ramdomize_values">Ramdomize values</string>
    <string name="load_data_from_server">Load Data from server....</string>
    <string name="ratings">Ratings</string>
    <string name="_0">0%</string>
    <string name="lottie_animation">Lottie animation</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="hide_show_animation">Hide / Show Animation</string>
    <string name="hours">hours</string>
    <string name="_23">23</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="random_value_2">Random value 2</string>
    <string name="random_value">Random value</string>
</resources>