<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black_u">

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="@string/_23"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintEnd_toEndOf="@+id/hours"
        app:layout_constraintStart_toStartOf="@+id/hours"
        app:layout_constraintTop_toBottomOf="@+id/hours" />

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/_23"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/minutes"
        app:layout_constraintTop_toTopOf="@+id/minutes" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/minutes"
        app:layout_constraintStart_toStartOf="@+id/minutes"
        app:layout_constraintTop_toBottomOf="@+id/minutes" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/_23"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/hours"
        app:layout_constraintTop_toTopOf="@+id/hours" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seconds"
        app:layout_constraintTop_toBottomOf="@+id/seconds" />

</androidx.constraintlayout.widget.ConstraintLayout>