<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    app:layout_constraintGuide_percent="0.20">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lottie_animation"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/firstload" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStart"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/start_animation"
        android:textSize="11sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStop"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/stop_animation"
        android:textSize="11sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonHide"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/hide_show_animation"
        android:textSize="11sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/buttonStop"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="232dp"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>